2002-09-18  Richard Williamson  <rjw@apple.com>
    
        Added documentation keywords to headers.
    
        * WebView.subproj/WebView.h:

2002-09-18  Richard Williamson  <rjw@apple.com>

        Added documentation keywords to headers.
        
        * WebView.subproj/WebDataSource.h:

2002-09-18  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebController.h: Fix typo.

2002-09-18  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebController.h: Add getters.
        * WebView.subproj/WebController.m:
        (-[WebController applicationNameForUserAgent]): Added.
        (-[WebController userAgent]): Added.

2002-09-17  Darin Adler  <darin@apple.com>

	Fix bug where image documents were broken.

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer drawClippedToValidInRect:fromRect:]): loadStatus of 0
	means the whole image is ready, not 0 scan lines; so check > 0, not >= 0.

        * WebKit.pbproj/project.pbxproj: Let Project Builder be the boss of me.

2002-09-17  Richard Williamson   <rjw@apple.com>

        * History.subproj/WebHistory.h:
        * History.subproj/WebHistory.m:
        (-[WebHistory addEntryForURLString:]):
        (-[WebHistory containsEntryForURLString:]):
        Added URL string API.  We should remove use of
        NSURL from this API.
        
        * History.subproj/WebHistoryPrivate.h:
        * History.subproj/WebHistoryPrivate.m:
        (-[WebHistoryPrivate _entryForURLString:]):
        (-[WebHistoryPrivate containsEntryForURLString:]):
        Implementation of above.
        
        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer drawGlyphs:numGlyphs:fromGlyphPosition:toGlyphPosition:atPoint:withPadding:withTextColor:backgroundColor:]):
        (-[WebTextRenderer slowFloatWidthForCharacters:stringLength:fromCharacterPostion:numberOfCharacters:applyRounding:]):
        Use ((int)(x + (1.0 - FLT_EPSILON))) instead of ceil().
